cs352/proj3/tests/type_rules/type_err/11.js
<script type="text/JavaScript">
var x = true == 1
</script>
